src/Nav/Nav.css
.fa-book {
    padding-right: 4%;
}

.logo {
    font-size: 90%;
    margin-left: 2%;
    position: absolute;
    text-align: left;
    width: 40%;
}

.logo a {
    color: rgb(133, 228, 109);
    font-family: 'Roboto', sans-serif;
    font-size: 1.3em;
}

.logo a:hover {
    transition: 0.2s ease-out;
    color: rgb(110, 209, 86);
}

.logo a:focus {
    color: rgb(178, 255, 147);
    border-bottom: 2px solid;
}

.logo a:active {
    color: rgb(119, 233, 96);
}

.my-logs,
.my-eateries {
    font-size: 1.2em;
    font-weight: bold;
    margin-top: 1%;
}

.my-logs .fa-file-alt {
    padding-right: 6%;
}
.my-eateries .fa-utensils {
    padding-right: 6%;
}

.my-logs a {
    font-family: 'Roboto', sans-serif;
    padding-right: 12%;
}

.my-logs a:hover {
    transition: 0.2s ease-out;
    color: rgb(133, 228, 109);
}

.my-logs a:focus {
    color: rgb(178, 255, 147);
    border-bottom: 2px solid;
}

.my-logs a:active {
    color: rgb(119, 233, 96);
}

.my-eateries a {
    font-family: 'Roboto', sans-serif;
    padding-right: 10%;
}

.my-eateries a:hover {
    transition: 0.2s ease-out;
    color: rgb(82, 171, 255);
}

.my-eateries a:focus {
    color: rgb(111, 181, 247);
    border-bottom: 2px solid;
}

.my-eateries a:active {
    color: rgb(83, 161, 235);
}

nav {
    padding: 1% 0;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
}

nav.top {
    text-align: right;
    z-index: 10;
}

nav.top li {
    display: inline-block;
    padding: 0;
}

nav.top li::after {
    content: "";
    padding-right: 30px;
}

ul {
    list-style: none;
    margin: 0%;
}

@media screen and (min-width: 320px) and (max-width: 350px){
    .logo a {
        font-size: 0.65em;
    }

    .my-logs,
    .my-eateries {
        font-size: 0.65em;
        margin-top: 4.7%;
    }

    .my-logs a{
        padding-right: 0%;
    }

    nav {
        padding: 1.8% 0%;
    }
}

@media screen and (min-width: 351px) and (max-width: 400px){
    .logo a {
        font-size: 0.73em;
    }

    .my-logs,
    .my-eateries {
        font-size: 0.72em;
        margin-top: 4%;
    }

    .my-logs a{
        padding-right: 0%;
    }

    nav {
        padding: 1.7% 0%;
    }

}

@media screen and (min-width: 401px) and (max-width: 450px) {
    .logo a {
        font-size: 0.85em;
    }

    .my-logs,
    .my-eateries {
        font-size: 0.8em;
        margin-top: 3%;
    }

    .my-logs a{
        padding-right: 2.5%;
    }

    nav {
        padding: 1.6% 0%;
    }
}

@media screen and (min-width: 451px) and (max-width: 500px) {
    .logo a {
        font-size: 1em;
    }

    .my-logs,
    .my-eateries {
        font-size: 0.9em;
        margin-top: 2.3%;
    }

    .my-logs a{
        padding-right: 5%;
    }

    nav {
        padding: 1.5% 0%;
    }
}

@media screen and (min-width: 501px) and (max-width: 550px) {
    .logo a {
        font-size: 1.1em;
    }

    .my-logs,
    .my-eateries {
        font-size: 1em;
        margin-top: 1.5%;
    }

    .my-logs a{
        padding-right: 8%;
    }

}

@media screen and (min-width: 551px) and (max-width: 600px) {
    .logo a {
        font-size: 1.2em;
    }

    .my-logs,
    .my-eateries {
        font-size: 1.1em;
        margin-top: 1.3%;
    }

    .my-logs a{
        padding-right: 8%;
    }
}


@media screen and (min-width: 601px) and (max-width: 768px) {
    .my-logs,
    .my-eateries {
        margin-top: 1.4%;
    }

    nav {
        padding: 1.4% 0%;
    }
}

@media screen and (min-width: 769px) and (max-width: 1024px) {
    nav {
        padding: 1.2% 0%;
    }
}

@media screen and (min-width: 1025px) and (max-width: 1185px) {
    nav {
        padding: 1% 0%;
    }
}

@media screen and (min-width: 1186px) and (max-width: 4000px) {
    nav {
        padding: 0.8% 0%;
    }
}

